syntax = "proto3";

option go_package = "github.com/orzogc/acfundanmu/acproto";

package AcFunDanmu.Im.Basic;

message HandshakeRequest {
	int32 unknown1 = 1;
	int32 unknown2 = 2;
}
