syntax = "proto3";

option go_package = "github.com/orzogc/acfundanmu/acproto";

package AcFunDanmu.Im.Basic;

message TokenInfo {
	TokenType tokenType = 1;
	bytes token = 2;

	enum TokenType {
		kInvalid = 0;
		kServiceToken = 1;
	}
}
